# utility_design_agent

./: .env.example  .gitignore  README.md  SETUP.md  example.py  pyproject.toml  run_example.bat  run_example.sh
.codebuddy/plans/: utility-design-agent_0e023d07(未完成).md  utility-design-agent_3da2bacf(未完成).md  utility-design-agent_b4e59a4d(未完成).md  utility-design-agent_f33c9a5a.md
.codebuddy/skills/utility-design-agent/: SKILL.md
docs/: custom_input_range.md
src/utility_design_agent/: __init__.py  cli.py  config.py  exporter.py  formula_engine.py  models.py  visualizer.py
src/utility_design_agent/llm_backend/: __init__.py  base.py  litellm_backend.py  openai_backend.py
src/utility_design_agent/prompts/: __init__.py  builder.py  templates.py
src/utility_design_agent/readers/: __init__.py  base.py  dict_reader.py  feishu_reader.py  local_reader.py
tests/: README_test_image.md  conftest.py  test_exporter.py  test_formula_engine.py  test_image.py  test_llm_backend.py  test_models.py  test_prompts.py  test_readers.py  test_visualizer.py
